Correct "URL" deprecated since version20, comments